{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 111,
  "lineage": "18b0d40d-af79-d4eb-cd46-72bef4471e13",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:444975471869:security-group/sg-031a7a78fbd6534cb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-031a7a78fbd6534cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "binaryflavor.so-public",
            "name_prefix": "",
            "owner_id": "444975471869",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b9b3557a46b305c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085e96fc0e501d4c2",
            "association_id": "eipassoc-093ad9b6a24615306",
            "domain": "vpc",
            "id": "eipalloc-085e96fc0e501d4c2",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-05c86d6a3fca149a9",
            "private_dns": "ip-10-0-101-147.ap-northeast-2.compute.internal",
            "private_ip": "10.0.101.147",
            "public_dns": "ec2-13-209-220-90.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.220.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb83e4c3e0a72028",
            "association_id": "eipassoc-05972497c35f1d2a6",
            "domain": "vpc",
            "id": "eipalloc-0eb83e4c3e0a72028",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-03792d90be8d4bd3c",
            "private_dns": "ip-10-0-101-158.ap-northeast-2.compute.internal",
            "private_ip": "10.0.101.158",
            "public_dns": "ec2-43-200-159-134.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.159.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:444975471869:internet-gateway/igw-04cfa90e927ea2529",
            "id": "igw-04cfa90e927ea2529",
            "owner_id": "444975471869",
            "tags": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06b9b3557a46b305c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085e96fc0e501d4c2",
            "connectivity_type": "public",
            "id": "nat-05d390b3ac76fc8e6",
            "network_interface_id": "eni-05c86d6a3fca149a9",
            "private_ip": "10.0.101.147",
            "public_ip": "13.209.220.90",
            "subnet_id": "subnet-0de80b4e7a91fa51b",
            "tags": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb83e4c3e0a72028",
            "connectivity_type": "public",
            "id": "nat-078eb4fbfbfb93fd9",
            "network_interface_id": "eni-0d6823656eec8976d",
            "private_ip": "10.0.102.197",
            "public_ip": "43.200.159.134",
            "subnet_id": "subnet-09ae10611266bfb38",
            "tags": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-002986b6ce9d9b0911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05d390b3ac76fc8e6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-002986b6ce9d9b091",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07f243e0e911e67191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-078eb4fbfbfb93fd9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07f243e0e911e6719",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04cfa90e927ea2529",
            "id": "r-rtb-07fbeb16d81baa9841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07fbeb16d81baa984",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:444975471869:route-table/rtb-002986b6ce9d9b091",
            "id": "rtb-002986b6ce9d9b091",
            "owner_id": "444975471869",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05d390b3ac76fc8e6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b9b3557a46b305c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:444975471869:route-table/rtb-07f243e0e911e6719",
            "id": "rtb-07f243e0e911e6719",
            "owner_id": "444975471869",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04663f6de1eeb43a8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b9b3557a46b305c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:444975471869:route-table/rtb-07fbeb16d81baa984",
            "id": "rtb-07fbeb16d81baa984",
            "owner_id": "444975471869",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04cfa90e927ea2529",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b9b3557a46b305c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0baa510d14bde303c",
            "route_table_id": "rtb-002986b6ce9d9b091",
            "subnet_id": "subnet-093756e89facbdcae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087dbed8b287e4b61",
            "route_table_id": "rtb-07f243e0e911e6719",
            "subnet_id": "subnet-05960f397d4fa6d8e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aeafd707524892ba",
            "route_table_id": "rtb-07fbeb16d81baa984",
            "subnet_id": "subnet-0de80b4e7a91fa51b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f104ccdcb014ad6f",
            "route_table_id": "rtb-07fbeb16d81baa984",
            "subnet_id": "subnet-09ae10611266bfb38"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:444975471869:subnet/subnet-093756e89facbdcae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-093756e89facbdcae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "444975471869",
            "tags": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Private": "true",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Private": "true",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06b9b3557a46b305c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:444975471869:subnet/subnet-05960f397d4fa6d8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05960f397d4fa6d8e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "444975471869",
            "tags": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Private": "true",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Private": "true",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06b9b3557a46b305c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:444975471869:subnet/subnet-0de80b4e7a91fa51b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0de80b4e7a91fa51b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "444975471869",
            "tags": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Private": "false",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Private": "false",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06b9b3557a46b305c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:444975471869:subnet/subnet-09ae10611266bfb38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-09ae10611266bfb38",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "444975471869",
            "tags": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Private": "false",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Private": "false",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06b9b3557a46b305c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:444975471869:vpc/vpc-06b9b3557a46b305c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-017aa9d526e3b1656",
            "default_route_table_id": "rtb-0153070f5e39e7e65",
            "default_security_group_id": "sg-0f89e7fae99acd196",
            "dhcp_options_id": "dopt-46b8cf2d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06b9b3557a46b305c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0153070f5e39e7e65",
            "owner_id": "444975471869",
            "tags": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "neilbyun",
              "Name": "binaryflavor.so",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}